--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,10 @@
 
 export(amino_acids)
 export(amino_letters)
+export(count_k_mers)
 export(count_k_mers_fast)
+export(count_mers)
 export(generate_random_alphabet)
+export(generate_random_seq)
 importFrom(Rcpp,sourceCpp)
 useDynLib(kmer)
