Add necessary @export for methods that are tested

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,8 @@ export(count_k_mers)
 export(count_mers)
 export(generate_random_alphabet)
 export(generate_random_seq)
+export(get_hash)
+export(get_hash_for_word)
+export(get_window_length)
 importFrom(Rcpp,sourceCpp)
 useDynLib(kmer)
