--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,5 +15,8 @@ SystemRequirements: C++11
 RoxygenNote: 7.0.0
 Encoding: UTF-8
 Suggests:
-  testthat,
-  covr
+    testthat,
+    covr,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
