--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,8 @@ Version: 1.1
 Date: 2019-11-03
 Author: Piotr Olesiejuk, Jadwiga Słowik
 Maintainer: Piotr Olesiejuk <piotrek.olesiejuk@gmail.com>
-Description: kmer is a package providing fast counting of k-mers in sequences. It allowes user to specify
-  lengths of the k-mers and gaps between aminoacids in the sequence. It's written with Rcpp to provide fast code
+Description: kmer is a package providing fast counting of k-mers in sequences. It allows user to specify
+  lengths of the k-mers and gaps between amino acids in the sequence. It's written with Rcpp to provide fast code
   execution.
 License: MIT + file LICENSE
 Imports: Rcpp (>= 1.0.2)
@@ -18,5 +18,7 @@ Suggests:
     testthat,
     covr,
     knitr,
-    rmarkdown
+    rmarkdown,
+    spelling
 VignetteBuilder: knitr
+Language: en-US
