--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,4 @@ export(get_hash_for_word)
 export(get_window_length)
 importFrom(Rcpp,sourceCpp)
 useDynLib(kmer)
+importFrom(RcppParallel, RcppParallelLibs)
