Add doc to matrix version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(amino_acids)
 export(amino_letters)
 export(count_k_mers)
 export(count_kmer_num)
+export(count_kmers_larger_than_one)
 export(count_kmers_str)
 export(count_mers)
 export(generate_random_alphabet)
