--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(count_kmer_num)
 export(count_kmers_larger_than_one)
 export(count_kmers_str)
 export(count_mers)
+export(count_unigrams)
 export(generate_random_alphabet)
 export(generate_random_seq)
 export(get_hash)
